--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 #page title
-page_title                                :                                           # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
+page_title                                : The Commission App for iOS                                  # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
 
 # App Info
 ios_app_id                                : 1571645478                                # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
@@ -9,17 +9,17 @@ playstore_link                            :                                     
 presskit_download_link                    :                                           # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
-app_icon                                  : # assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
-app_name                                  :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : An easy-to-use commission tracking application.
+app_icon                                  : assets/Icon-60@3x.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
+app_name                                  : Commission                                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_price                                 : $3.99 CAD                        # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_description                           : Easily track your commission earned from all your businesses.
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
 
 
 # Information About Yourself
-your_name                                 : Joshua Russell                                
+your_name                                 : Nineone Software Inc.                                
 your_link                                 :                      
 your_city                                 : Vancouver                                
 email_address                             : joshrussell91@gmail.com
@@ -61,11 +61,6 @@ features                                  :
   - title                                 : Data Export
     description                           : Export your transactions for a time period as a CSV (comma separated value) file. CSV files can then be imported into programs such as Excel or Numbers for further processes or sharing with accounts, co-workers etc.
     fontawesome_icon_name                 : arrow-alt-circle-down
-
-  - title                                 : # New Feature Title
-    description                           : # New Feature Description
-    fontawesome_icon_name                 : # Enter Font Awesome icon name (e.g. star). Find icons on fontawesome.com/icons.
-
 
 
 # Theme Settings
