--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ features                                  :
 # Theme Settings
 topbar_color                              : "#000000"
 topbar_transparency                       : 0.1
-topbar_title_color                        : "#6C63FF"
+topbar_title_color                        : "#ffffff"
 
 cover_image                               : assets/headerimage.png                    # Replace with alternative image path or image URL.
 cover_overlay_color                       : "#363b3d"
@@ -76,7 +76,7 @@ device_color                              : black                               
 
 body_background_color                     : "#ffffff"
 
-link_color                                : "#6C63FF"
+link_color                                : "#ffffff"
 
 app_title_color                           : "#ffffff"
 app_price_color                           : "#ffffff"
