--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ presskit_download_link                    :                                     
 app_icon                                  : assets/Icon-60@3x.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  : Commission                                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 : $3.99 CAD                        # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Easily track your commission earned from all your businesses.
+app_description                           : Easily track your commission earned from all of your sales.
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
@@ -22,7 +22,7 @@ enable_smart_app_banner                   : true                                
 your_name                                 : Nineone Software Inc.                                
 your_link                                 :                      
 your_city                                 : Vancouver                                
-email_address                             : joshrussell91@gmail.com
+email_address                             : nineonesoftware@gmail.com
 facebook_username                         :                                           
 instagram_username                        : 
 twitter_username                          : 
@@ -68,7 +68,7 @@ topbar_color                              : "#000000"
 topbar_transparency                       : 0.1
 topbar_title_color                        : "#ffffff"
 
-cover_image                               : assets/headerimage.png                    # Replace with alternative image path or image URL.
+cover_image                               : assets/pexels-pixabay-209224.jpg                    # Replace with alternative image path or image URL.
 cover_overlay_color                       : "#363b3d"
 cover_overlay_transparency                : 0.8
 
