--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ presskit_download_link                    :                                     
 app_icon                                  : assets/Icon-60@3x.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  : Commission                                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 : $3.99 CAD                        # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Easily track your commission earned from all of your sales.
+app_description                           : Easily track and calculate your commission from multiple businesses and products.
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
