--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ enable_smart_app_banner                   : true                                
 
 
 # Information About Yourself
-your_name                                 : NineOne Software Inc.                                
+your_name                                 : Nineone Software Inc.                                
 your_link                                 :                      
 your_city                                 : Vancouver                                
 email_address                             : nineonesoftware@gmail.com
